--- a/neo4j-bolt.cabal
+++ b/neo4j-bolt.cabal
@@ -15,30 +15,48 @@ cabal-version:       >=1.10
 
 flag liquidhaskell
   description:             After building, verify with LiquidHaskell
-  default:                 True
+  default:                 False
 
 library
   hs-source-dirs:      src
   exposed-modules:     
     Neo4j
+    , PackStream.Internal.Message
+    -- , PackStream.Internal.Types -- needs ghc 8
   build-depends:       
     base >= 4.7 && < 5
     , bytestring >= 0.10 && < 0.11
-    , cereal >= 0.5.2 && < 0.6
+    , cereal >= 0.5.0 && < 0.6
+    , either >= 4.4.1.1 && < 5.0
     , liquidhaskell >= 0.6 && < 0.7
     , liquidhaskell-cabal == 0.1.1.0
     , network >= 2.6.0.0 && < 2.7
     , safe >= 0.3 && < 0.4
-    , uri-bytestring >= 0.2.0 && < 0.3.0
+    , singletons
+    , text
+    , transformers >= 0.4.2.0 && < 0.5
+    , type-list
+  --  , uri-bytestring >= 0.2.0 && < 0.3.0
+    , void >= 0.7.0 && < 0.8.0
   default-language:    Haskell2010
-  x-liquidhaskell-options: --diff --no-termination
+  x-liquidhaskell-options: --diff --no-termination --totality
 
 test-suite neo4j-bolt-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base
-                     , neo4j-bolt
+  build-depends:       
+    base
+    , bytestring
+    , either >= 4.4.1.1 && < 5.0
+    , tasty
+    , tasty-hunit
+    , tasty-hspec >= 1.1.3 && < 2.0
+    , tasty-smallcheck
+    , tasty-quickcheck
+    , text
+    , network >= 2.6.0.0 && < 2.7
+    , neo4j-bolt
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
