--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-6.1
+#resolver: nightly-2016-06-06
+resolver: lts-6.3
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
