--- a/neo4j-bolt.cabal
+++ b/neo4j-bolt.cabal
@@ -50,6 +50,7 @@ test-suite neo4j-bolt-test
     , bytestring
     , either >= 4.4.1.1 && < 5.0
     , tasty
+    , hspec
     , tasty-hunit
     , tasty-hspec >= 1.1.3 && < 2.0
     , tasty-smallcheck
