--- a/neo4j-bolt.cabal
+++ b/neo4j-bolt.cabal
@@ -15,18 +15,20 @@ cabal-version:       >=1.10
 
 flag liquidhaskell
   description:             After building, verify with LiquidHaskell
-  default:                 False
+  default:                 True
 
 library
   hs-source-dirs:      src
   exposed-modules:     
     Neo4j
+    , Graph.Types
     , PackStream.Internal.Message
     -- , PackStream.Internal.Types -- needs ghc 8
   build-depends:       
     base >= 4.7 && < 5
     , bytestring >= 0.10 && < 0.11
     , cereal >= 0.5.0 && < 0.6
+    , containers
     , either >= 4.4.1.1 && < 5.0
     , liquidhaskell >= 0.6 && < 0.7
     , liquidhaskell-cabal == 0.1.1.0
@@ -36,6 +38,7 @@ library
     , text
     , transformers >= 0.4.2.0 && < 0.5
     , type-list
+    , test-lh
   --  , uri-bytestring >= 0.2.0 && < 0.3.0
     , void >= 0.7.0 && < 0.8.0
   default-language:    Haskell2010
@@ -44,10 +47,11 @@ library
 test-suite neo4j-bolt-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             Spec.hs
+  main-is:             Main.hs
   build-depends:       
     base
     , bytestring
+    , cereal >= 0.5.0 && < 0.6 
     , either >= 4.4.1.1 && < 5.0
     , tasty
     , hspec
@@ -60,6 +64,7 @@ test-suite neo4j-bolt-test
     , neo4j-bolt
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
+  x-liquidhaskell-options: --diff --no-termination --totality
 
 source-repository head
   type:     git
